fix: text-overflow

--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -5,6 +5,16 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 22px;
+  text-overflow: ellipsis;
+  max-width: 30vw;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+@media all and (max-width: 1024px) {
+  .profile__description {
+    max-width: 50vw;
+  }
 }
 
 @media all and (max-width: 680px) {
@@ -13,5 +23,6 @@
     line-height: 17px;
     text-align: center;
     grid-column: 1/2;
+    max-width: 70vw;
   }
 }
