--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,6 +5,16 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 1.14;
+  text-overflow: ellipsis;
+  max-width: 29vw;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+@media all and (max-width: 1024px) {
+  .profile__name {
+    max-width: 40vw;
+  }
 }
 
 @media all and (max-width: 680px) {
@@ -12,5 +22,6 @@
     font-size: 27px;
     line-height: 33px;
     text-align: center;
+    max-width: 70vw;
   }
 }
